frontend/src/styles.css
/* ... */
.share-close-container {
  display: flex;
  gap: 0.5rem;
}

.bookmark-container,
.close-container,
.share-container {
  height: calc(var(--base-font-size) * 1.875 * var(--scaling-factor));
  width: calc(var(--base-font-size) * 1.875 * var(--scaling-factor));
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #f7fafc;
  border-radius: 1000px;
  cursor: pointer;
}

.close-container > img,
.share-container > img {
  width: 16px;
  height: 16px;
}

.close-container,
.share-container {
  min-width: 44px;
  min-height: 44px;
}

.share-container.confirm {
  background-color: #4fd1c5;
}

.master-card-name {
  color: #171923;
  margin-top: 0.75rem;
  font-size: calc(var(--base-font-size) * 1.25 * var(--scaling-factor));
  font-weight: bold;
}

.master-card-profession {
  margin-top: 0.25rem;
  color: #171923;
  font-size: calc(var(--base-font-size) * var(--scaling-factor));
  font-weight: normal;
}

.mastercard-location {
  margin-top: 0.5rem;
  margin-left: -3px;
  display: flex;
  align-items: center;
  color: #655f5f;
  font-weight: 300;
  font-size: calc(var(--base-font-size) * 0.75 * var(--scaling-factor));
  gap: 0.5rem;
}

.about-pre {
  white-space: pre-wrap;
}

.mastercard-contacts {
  /* display: none; */
  margin-top: 0.5rem;
}

.contact-name,
.contact-value {
  font-size: 12px;
}

.contact-value {
  margin-left: 0.5rem;
  text-decoration: none;
}

.mastercard-contacts.flipped {
  display: block;
}

.mastercard-about {
  font-weight: 300;
  margin-top: 1rem;
  font-size: 12px;
  line-height: 150%;
  background-color: #f7fafc;
  border-radius: 0.5rem;
  padding: 0.25rem 0.5rem;
}

/* .mastercard-content {
  margin-top: 0.5rem;
  color: #655f5f;
  font-weight: 300;
  font-size: 10px;
} */

.mastercard-tag-container {
  margin-top: 0.5rem;
  display: flex;
  flex-direction: row;
  align-content: flex-start;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.mastercard-tag {
  display: flex;
  flex-direction: row;
  color: #655f5f;
  border: 1px solid #655f5f;
  max-width: fit-content;
  font-size: calc(var(--base-font-size) * 0.625 * var(--scaling-factor));
  padding: 10px;
  border-radius: 50px;
}

.master-card-footer {
  display: flex;
  gap: 0;
}

.btn {
  width: 100%;
  border: none;
  outline: none;
  background-color: #171923;
  color: #ffffff;
  border-radius: 1000px;
  padding: 10px 15px;
  font-size: calc(var(--base-font-size) * var(--scaling-factor));
}

.btn:hover {
  transition: 0.1s ease-out;
  background-color: #4fd1c5;
  color: #171923;
  cursor: pointer;
}

.master-card-footer .btn {
  margin: 0 10px 10px 10px;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: 100;
}

.modal-overlay-inside {
  position: sticky;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal-content {
  position: absolute;
  top: 50vh;
  left: 50vw;
  transform: translate(-50%, -50%);

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: calc(var(--modal-card-width) * var(--modal-scaling-factor));
  min-height: calc(var(--modal-card-height) * var(--modal-scaling-factor));

  flex-shrink: 0;
  border-radius: 1.25rem;
  border: 1px solid #d9d9d9;
  background: #f7fafc;
}

.modal-content#success {
  width: 400px;
  min-height: 200px;
}

.footer {
  display: flex;
  margin-top: 4rem;
  justify-content: space-between;
  align-items: center;
  height: 10rem;
}

.terms {
  display: flex;
  margin-left: 4rem;
  border-right: 1px solid #edf2f714;
  padding-right: 4rem;
}

.terms ul {
  margin: 0;
  padding: 0;
  list-style: none;
  font-weight: 300;
  font-size: 10px;
  line-height: 1.25rem;
}

.terms li {
  cursor: pointer;
}

.terms li:hover {
  text-decoration: underline;
  text-underline-offset: 0.25rem;
}

.love {
  margin-right: 4rem;
}

.love span {
  margin-left: 0.5rem;
}

/*







====================== CREATE USER FORM ====================== 






*/

.required {
  margin-left: 0.25rem;
  color: rgb(255, 77, 77);
}

.create-user-container {
  width: 80%;
  max-width: 900px;
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.create-user-form {
  display: flex;
  width: 55%;
  flex-direction: column;
  align-items: flex-start;
  gap: 1rem;
  padding: 1rem;
  border-radius: 0.5rem;
}

.create-user-form form {
  width: 100%;
}

.create-user-form label {
  font-size: 14px;
  font-weight: 300;
}

.create-user-form .create-user-photo {
  height: 100px;
  width: 100px;
  border: 1px solid #d9d9d9;
  border-radius: 100000px;
  background-size: cover;
  margin: 1rem 0;
}

.create-user-form .create-user-input {
  width: 100%;
  margin-top: 0.25rem;
  padding: 0.5rem;
  border: 1px solid #d9d9d9;
  border-radius: 0.25rem;
  background-color: #ffffff;
  font-size: 14px;
  font-weight: 300;
}

.create-user-form .create-user-input:focus {
  outline: 1px solid #4fd1c5;
}

.create-user-form .btn {
  margin-top: 1rem;
}

.create-user-form .btn.is-loading {
  background-color: #655f5f;
}

.create-user-form .btn.is-loaded {
  background-color: #4fd1c5;
}

.create-user-input.error {
  outline: 1px solid rgb(255, 77, 77);
}

.contact-type-container {
  display: flex;
  gap: 1rem;
}

.error-message {
  color: rgb(255, 77, 77);
  font-weight: 300;
  font-size: 0.75rem;
}
/* ... */

